# managed-db-mcp

./: .gitignore  INSTALLATION.md  README.md  claude_code_config.json  pyproject.toml  requirements.txt
src/managed_db_mcp/: __init__.py  __main__.py
