[project]
name = "managed-db-mcp"
version = "0.1.0"
description = "MCP server for Managed DB API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
managed-db-mcp = "managed_db_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/managed_db_mcp"]
